# zshlogger

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README.txt  autogen.sh  bootstrap.sh  configure.ac  configure.in  cvs2cl  test  zshlogger.c  zshlogger.spec  zshlogger.spec.in
man/: Makefile.am  zshlogger.1
src/: Makefile.am  zshlogger.c
